# System_Programming

./: 0001-fix-truncation-error.patch  calculator.h
Task 1/: calculator.cpp
Task 1/git format-patch/: 0002-formatting-use-tabs-instead-of-spaces.patch
Task 2/: CMakeLists.txt  Makefile.txt  build.ninja  rules.ninja
Task 2/include/: calculator.h
Task 2/src/: calculator.cpp  main.cpp
Task 3/: organize_files.sh
